--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,9 +17,8 @@ body {
   min-width: 1000px;
   padding: 50px;
   background: var(--primary-color);
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
-    url("assets/images/cd.jpg");
-  background-size: 100% 100%;
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("assets/images/cd.jpg");
+  background-size: 100% 200%;
   background-position: center;
   transition: all 0.3s ease;
 }
@@ -119,6 +118,7 @@ img {
 }
 .temperature {
   display: flex;
+  color: #2e2e2e;
 }
 .temperature #temp {
   font-size: 70px;
@@ -137,6 +137,7 @@ img {
   margin: 20px 0;
 }
 .condition-rain {
+  color: #777;
   font-size: 18px;
   text-transform: capitalize;
 }
@@ -149,7 +150,7 @@ img {
 .condition-rain div i {
   width: 20px;
 }
-
+ 
 .date-time p{
   font-size: 20px;
   font-size: 700;
@@ -158,9 +159,10 @@ img {
   display: flex;
   align-items: center;
   font-size: 16px;
-  font-size: 700;
+  font-weight: 600;
   gap: 10px;
   margin-top: 10px;
+  color: rgb(60, 60, 60);
 }
 .main {
   width: 100%;
@@ -263,6 +265,7 @@ img {
   display: flex;
   flex-direction: column;
 }
+
 .card2 .card-heading {
   color: #c2c2c2;
 }
@@ -277,7 +280,7 @@ img {
 .card2 .content p:nth-child(2) {
   font-size: 16px;
   margin-top: 20px;
-  text-align: left;
+  text-align: center;
 }
 .credits {
   text-align: center;
